# tdots

./: LICENSE  README.md  main.py  pyproject.toml
tdots/: tdot.py  tdots.py
