[tool.poetry]
name = "tdots"
version = "0.1.0"
description = "Universal data primitive"
authors = ["victorgrappe <victor.grappe@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
